[package]
name = "url-to-markdown"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A tool to convert HTML from URLs to Markdown"

[dependencies]
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.11.22", features = ["json", "gzip", "brotli", "deflate"] }
scraper = "0.18.1"
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
url = "2.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4"
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
