[package]
name = "url2md"
version = "0.1.0"
edition = "2021"
authors = ["Anang Aji Rahmawan"]
description = "A tool to convert HTML from URLs to Markdown"

[dependencies]
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.11.22", features = ["json", "gzip", "brotli", "deflate"] }
scraper = "0.18.1"
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
url = "2.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4"
once_cell = "1.19"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
test-log = "0.2"
env_logger = "0.10"
mockall = "0.12"
tower = { version = "0.4", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
